--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,5 @@
 body{
-  background-color:#252525;
+  background-color:#333;
   color:#FFF;
 }
 
@@ -18,6 +18,11 @@ h2{
 }
 h3{
   font-size: 18px; 
+}
+.btn-default{
+  color:#FFF;
+  background-color:#333;
+  border-color:#666;
 }
 
 /* Mindcracker */
@@ -176,7 +181,7 @@ h3{
 .featuredvideo .vidplayer{
   background-color:#000;
   height:100%;
-  padding-right:0;
+  padding:0;
   height:280px;
 }
 .featuredvideo iframe{
@@ -230,7 +235,7 @@ h3{
   background-color:#444;
 }
 
-.tweet{
+/*.tweet{
   background-color:#333;
 }
 .tweettext{
@@ -241,9 +246,9 @@ h3{
 .tweetuser{
   width:100%;
   font-weight:bold;
-}
+}*/
 
-.chat{
+/*.chat{
   background-color:#333;
   min-height:40px;
   margin-bottom:5px;
@@ -257,4 +262,98 @@ h3{
   width:40px;
   overflow:hidden;
   float:left;
+}*/
+
+.vidblock{
+  display:inline-block;
+  margin-right:8px;
+  margin-bottom:8px;
+  width:260px;
+  height:210px;
+  background-color:#333;
+  border-radius:3px;
+}
+.vidthumb{
+  width:260px;
+  height:145px;
+  background-position:center center;
+  background-size:cover;
+  border-radius:3px;
+}
+.vidinfo{
+  padding:0 8px;
+}
+.vidinfo p{
+  margin-bottom:0;
+}
+.vidinfo a{
+  color:#FFF;
+}
+.vidtitle{
+  font-weight:bold;
+  height:40px;
+  overflow:hidden;
+}
+.vidauthor{
+  text-transform:uppercase;
+  font-size:12px;
+}
+
+.rembeddit{
+  border:1px solid #444;
+  border-radius:5px;
+  background-color:#333;
+  color:#CFCFCF;
+}
+.reddit-title{
+  margin:12px;
+  color:#CFCFCF;
+  font-weight:bold;
+  text-transform:none;
+}
+.reddit-title img{
+  float:right;
+}
+.reddit-link{
+  border-top:1px solid #444;
+  min-height:50px;
+  padding:4px 12px;
+}
+.reddit-voting-arrows{
+  float:left;
+  width:0;
+  height:0;
+  visibility:hidden;
+}
+.linkflairlabel{
+  color:#444;
+  background-color:#888;
+  font-size:10px;
+  padding:0 3px;
+  border-radius:5px;
+  margin-right:5px;
+  text-transform:uppercase;
+}
+.reddit-entry{
+  padding:3px 0;
+}
+.dislikes{
+  font-size:0px;
+}
+.likes{
+  font-size:0px;
+}
+
+.footer{
+  margin:20px 0;
+}
+.footerlogo{
+  text-align:center;
+  background-image:url(../img/footerlogo.png);
+  background-position:center center;
+  background-repeat:no-repeat;
+  opacity:0.5;
+}
+.footerlogo:hover, .footerlogo:active{
+  opacity:1;
 }
