--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -174,6 +174,15 @@ h3{
   padding-top:28px;
   padding-bottom: 48px;
 }
+.memberlist .mindcracker {
+  margin-top:10px;
+  border: 2px solid;
+  border-color: #191919;
+  border-radius:5px;
+}
+.memberlist:hover .mindcracker:hover {
+  background-color:#6495E2;
+}
 .featuredvideo h2{
   color:#FFFFFF;
   padding-top:0;
@@ -246,7 +255,7 @@ h3{
 .tweetuser{
   width:100%;
   font-weight:bold;
-}*/
+  }*/
 
 /*.chat{
   background-color:#333;
@@ -262,122 +271,122 @@ h3{
   width:40px;
   overflow:hidden;
   float:left;
-}*/
+  }*/
 
-.vidlist{
-  padding-right:0;
-}
+  .vidlist{
+    padding-right:0;
+  }
 
-.vidblock{
-  display:inline-block;
-  margin-right:5px;
-  margin-bottom:16px;
-  width:220px;
-  height:190px;
-  background-color:#333;
-  border-radius:3px;
-}
-.vidblock .vidthumb{
-  width:100%;
-  height:125px;
-  background-position:center center;
-  background-size:cover;
-}
-@media (min-width:1200px){
   .vidblock{
-  margin-right:16px;
-    width:260px;
-    height:210px;
+    display:inline-block;
+    margin-right:5px;
+    margin-bottom:16px;
+    width:220px;
+    height:190px;
+    background-color:#333;
+    border-radius:3px;
   }
   .vidblock .vidthumb{
-    height:145px;
+    width:100%;
+    height:125px;
+    background-position:center center;
+    background-size:cover;
   }
-}
-.vidblock .vidinfo{
-  padding:0 8px;
-}
-.vidblock .vidinfo p{
-  margin-bottom:0;
-}
-.vidblock .vidinfo a{
-  color:#FFF;
-}
-.vidblock .vidtitle{
-  font-weight:bold;
-  height:40px;
-  overflow:hidden;
-}
-.vidblock .vidauthor{
-  text-transform:uppercase;
-  font-size:12px;
-}
-
-.rembeddit{
-  border:1px solid #444;
-  border-radius:5px;
-  background-color:#333;
-  color:#CFCFCF;
-}
-.reddit-title{
-  margin:12px;
-  color:#CFCFCF;
-  font-weight:bold;
-  text-transform:none;
-}
-.reddit-title img{
-  float:right;
-}
-.reddit-link{
-  border-top:1px solid #444;
-  min-height:50px;
-  padding:4px 12px;
-}
-.reddit-voting-arrows{
-  float:left;
-  width:0;
-  height:0;
-  visibility:hidden;
-}
-.linkflairlabel{
-  color:#444;
-  background-color:#888;
-  font-size:10px;
-  padding:0 3px;
-  border-radius:5px;
-  margin-right:5px;
-  text-transform:uppercase;
-}
-.reddit-entry{
-  padding:3px 0;
-}
-.dislikes{
-  font-size:0px;
-}
-.likes{
-  font-size:0px;
-}
-
-.footer{
-  margin:20px 0;
-  font-size:12px;
-  color:#CCC;
-}
-.footer p{
-  margin-bottom:0;
-}
-@media (min-width:992px){
-  .footerright{
-    text-align:right
+  @media (min-width:1200px){
+    .vidblock{
+      margin-right:16px;
+      width:260px;
+      height:210px;
+    }
+    .vidblock .vidthumb{
+      height:145px;
+    }
   }
-}
-.footerlogo{
-  text-align:center;
-  background-image:url(../img/footerlogo.png);
-  background-position:center center;
-  background-repeat:no-repeat;
-  opacity:0.5;
-  height:35px;
-}
-.footerlogo:hover, .footerlogo:active{
-  opacity:1;
-}
+  .vidblock .vidinfo{
+    padding:0 8px;
+  }
+  .vidblock .vidinfo p{
+    margin-bottom:0;
+  }
+  .vidblock .vidinfo a{
+    color:#FFF;
+  }
+  .vidblock .vidtitle{
+    font-weight:bold;
+    height:40px;
+    overflow:hidden;
+  }
+  .vidblock .vidauthor{
+    text-transform:uppercase;
+    font-size:12px;
+  }
+
+  .rembeddit{
+    border:1px solid #444;
+    border-radius:5px;
+    background-color:#333;
+    color:#CFCFCF;
+  }
+  .reddit-title{
+    margin:12px;
+    color:#CFCFCF;
+    font-weight:bold;
+    text-transform:none;
+  }
+  .reddit-title img{
+    float:right;
+  }
+  .reddit-link{
+    border-top:1px solid #444;
+    min-height:50px;
+    padding:4px 12px;
+  }
+  .reddit-voting-arrows{
+    float:left;
+    width:0;
+    height:0;
+    visibility:hidden;
+  }
+  .linkflairlabel{
+    color:#444;
+    background-color:#888;
+    font-size:10px;
+    padding:0 3px;
+    border-radius:5px;
+    margin-right:5px;
+    text-transform:uppercase;
+  }
+  .reddit-entry{
+    padding:3px 0;
+  }
+  .dislikes{
+    font-size:0px;
+  }
+  .likes{
+    font-size:0px;
+  }
+
+  .footer{
+    margin:20px 0;
+    font-size:12px;
+    color:#CCC;
+  }
+  .footer p{
+    margin-bottom:0;
+  }
+  @media (min-width:992px){
+    .footerright{
+      text-align:right
+    }
+  }
+  .footerlogo{
+    text-align:center;
+    background-image:url(../img/footerlogo.png);
+    background-position:center center;
+    background-repeat:no-repeat;
+    opacity:0.5;
+    height:35px;
+  }
+  .footerlogo:hover, .footerlogo:active{
+    opacity:1;
+  }
